--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -7,6 +7,11 @@
 	showCloseButton="true" 
 	xmlns:resourceBrowser="vdom.controls.resourceBrowser.*"
 >
+	<mx:Script>
+		<![CDATA[
+			import mx.events.CloseEvent;
+		]]>
+	</mx:Script>
 	
 	<!-- Main Class Scripting File -->			
 	<mx:Script source="ResourceBrowser_s.as" />
@@ -16,6 +21,7 @@
 		paddingLeft="5" paddingBottom="5" paddingRight="5" paddingTop="5"
 		horizontalGap="3" verticalGap="3"
 	>
+		<!-- Top Panel -->
 		<mx:HBox
 			width="100%" height="30" cornerRadius="0"
 			verticalAlign="middle" paddingLeft="5" paddingRight="5"
@@ -29,23 +35,22 @@
 				</mx:Array>					
 			</mx:ButtonBar>
 			
-			<mx:Button id="__expandBtn" height="24" label="Expand" toggle="true" click="{expandHandler();}" />
+			<mx:Button id="__expandBtn" height="24" label="Expand" toggle="true" click="{expandHandler();}" />			
+			
+			<mx:VRule height="100%" />
+			
+			<mx:Label text="Filter:" fontWeight="bold"/>
+			<mx:ComboBox id="__filterCBx" width="100%" dataProvider="{_filterDataProvider}" change="{filterCBxHandler();}" />
 			
 			<mx:VRule height="100%" />
 			
 			<mx:Button height="24" label="Upload File..." />
 			
-			<!--
-			<mx:Label text="Search:" fontWeight="bold" />
-			<mx:HBox
-				backgroundColor="#FFF6EA" borderStyle="solid" 
-				cornerRadius="3" verticalAlign="middle"
-				paddingLeft="4" paddingRight="4" height="24" width="150"
-			>
-				<mx:TextInput width="100%" height="20" borderStyle="none" />
-			</mx:HBox>
-			-->
+			<mx:VRule height="100%" />
+			
+			<mx:Button height="24" label="Delete File..." />
 		</mx:HBox>
+		<!-- End of top panel -->
 		
 		<mx:HBox width="100%" height="100%" horizontalGap="2">
 			<mx:Tile id="thumbsList"
@@ -78,11 +83,15 @@
 			</mx:VBox>	
 		</mx:HBox>
 	
-		<mx:HBox width="100%" horizontalAlign="right" verticalAlign="middle">
+		<mx:HBox width="100%" horizontalAlign="right" verticalAlign="middle" height="24">
 			<mx:Label text="Total Resources:" />
 			<mx:Label text="{_totalResources}" fontWeight="bold" />
+			<mx:VRule height="100%" />
+			<mx:Label text="Filtered:" />
+			<mx:Label text="{_filteredResources}" fontWeight="bold" />
+
 			<mx:Spacer width="100%" />
-			<mx:Button label="Done" click="{PopUpManager.removePopUp(this);}" />
+			<mx:Button label="Done" click="{doneHandler();}" />
 		</mx:HBox>
 	</mx:VBox>
 </mx:TitleWindow>
