git-svn-id: http://svn.vdombox.ru/flextools/trunk@1353 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ThumbnailItem.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ThumbnailItem.mxml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+	ThumbnailItem component for Resource Browser
+	Developed by Vadim A. Usoltsev, Tomsk, Russia, 2008
+-->
 <mx:VBox
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	width="113" height="132" 
