--- a/IDE/Vdom/vdom/controls/resourceBrowser/PreviewContainer.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/PreviewContainer.mxml
@@ -6,6 +6,8 @@
 <mx:Box 
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	borderStyle="solid" backgroundColor="#FFF6EA" cornerRadius="3"
+	horizontalScrollPolicy="off" verticalScrollPolicy="off"
+	horizontalAlign="center" verticalAlign="middle"
 	paddingBottom="10" paddingLeft="10" paddingRight="10" paddingTop="10"
  	xmlns:resourceBrowser="vdom.controls.resourceBrowser.*">
  
@@ -18,11 +20,30 @@
 		
 			public var imageWidth:int = 0;
 			public var imageHeight:int = 0;
+			private var _heightLimit:int = 0;
+			private var _widthLimit:int = 0;
 
 			public function set resource(source:Object):void {
 				__image.source = source.data;			
 				imageWidth = source.data.bitmapData.width;
 				imageHeight = source.data.bitmapData.height;
+				
+				if (imageWidth > _widthLimit || imageHeight > _heightLimit) {
+					if (_heightLimit >= int(Math.round(_widthLimit * imageHeight / imageWidth))) {
+						__image.width = _widthLimit;
+						__image.height = int(Math.round(_widthLimit * imageHeight / imageWidth));
+					} else {
+						__image.height = _heightLimit;
+						__image.width = int(Math.round(_heightLimit * imageWidth / imageHeight));
+					}					
+				} else {
+					__image.height = imageHeight;
+					__image.width = imageWidth;
+				}
+				
+				this.height = __image.height + 22;
+				this.width = __image.width + 22;
+				
 				//this.toolTip = imageWidth.toString() + "x" + imageHeight.toString();
 				this.toolTip = __image.width.toString() + "x" + __image.height.toString();
 				//this.width = __image.width + 20;
@@ -38,11 +59,11 @@
 			}
 			
 			public function set heightLimit(value:int):void {
-				__image.maxHeight = value;
+				_heightLimit = value - 22;
 			}
 			
 			public function set widthLimit(value:int):void {
-				__image.maxWidth = value;
+				_widthLimit = value - 22;
 			}
 		]]>
 	</mx:Script>
