git-svn-id: http://svn.vdombox.ru/flextools/trunk@1402 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -33,7 +33,7 @@
 			backgroundColor="#e5e5e5" borderStyle="solid"
 		>
 			
-			<mx:ButtonBar height="24" itemClick="{changeView(event);}">          			
+			<mx:ButtonBar height="24" itemClick="{applyView(event);}">          			
 				<mx:Array>
 					<mx:String id="tView">Thumbnails view</mx:String>
 					<mx:String id="lView">List view</mx:String>
